--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,7 @@
 ---
 section_title: 'Skills'
 section_subtitle: ''
+section_programming_languages: 'Programming Languages'
+section_libraries: 'Libraries'
+section_software: 'Software'
 ---
