--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ baseurl: '/Website' # the subpath of your site, e.g. /blog
 url: 'https://davidtello1.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 github_url: 'https://github.com/DavidTello1'
 linkedin_url: 'https://www.linkedin.com/in/david-tello-65b076155/'
+cv_url: 'https://docs.google.com/document/d/1TT_tTLwb0DDb6ctgiESuD-GWFiE8FyCa6enqKNs-_K8/edit?usp=sharing'
 
 # Build settings
 markdown: kramdown
