--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: 'David Tello'
 description: 'Hi! I am a Programmer and Game Designer.'
-email: 'davidtellop@gmail.com/Website'
+email: 'davidtellop@gmail.com'
 baseurl: '' # the subpath of your site, e.g. /blog
-url: 'https://davidtello1.github.io' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://davidtello1.github.io/Website' # the base hostname & protocol for your site, e.g. http://example.com
 github_url: 'https://github.com/DavidTello1'
 linkedin_url: 'https://www.linkedin.com/in/david-tello-65b076155/'
 cv_url: 'https://docs.google.com/document/d/1TT_tTLwb0DDb6ctgiESuD-GWFiE8FyCa6enqKNs-_K8/edit?usp=sharing'
