--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,4 @@
 ---
 intro: I have been playing video games since I was a kid, and later began creating my own little games with simple programmes and by modifying existing ones. That was when I began to realize that I liked more creating games than playing them. I especially like the programming and design aspects of it, as I consider that having a good programming base is the key to being able to make the game you want and designing the game is the most enjoyable part of the process because it is when everything is a possibility and there are no limits to the imagination.
-outro: I am a fourth year student of the Video Games Design and Development degree in CITM UPC, where I learnt all the necessary aspects of game creation and expanded my knowledge in a wide variety of areas, as well as improving my skills.
+outro: I am a fourth year student of the Video Games Design and Development degree at CITM UPC, where I learnt all the necessary aspects of game creation and expanded my knowledge in a wide variety of areas, as well as improving my skills.
 ---
